--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,3 +55,44 @@ body {
     text-decoration: none !important;
     color: white !important;
 }
+#Hero{
+    position: relative;
+    height: 80vh;
+    display: flex; width: 100%; align-items: center;
+    overflow: hidden;
+
+
+}
+
+#Hero .content{
+    width: 100%;
+    max-width: 14000px;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+
+}
+
+#myvideo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    min-width: 100%;
+    min-height: 100%;
+
+
+
+}
+
+#Hero .blur{
+    background-color: rgb(22, 140, 186,0.35);
+    backdrop-filter: blur(5px);
+    position:absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+
+}
