--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,92 +1,20 @@
-body {
-    background-color: #003B58;
+:root {
+  --primary-color: #003b58;
+  --primary-color-rgb: 0, 59, 88;
+  --secondary-color: #d45400;
+  --secondary-color-rgb: 212, 84, 0;
 }
 
-.bg-primary {
-    background-color: #023047 !important;
+* {
+  font-family: "Rubik", sans-serif
 }
 
-#home_title {
-    color: #D45400;
+.no-desktop {
+  display: none;
 }
 
-.dropdown-menu {
-    background-color: #8ecae6;
-    width: 5px;
-}
-
-.dropdown-item:hover {
-    color: black;
-}
-
-.navbar-toggler {
-    background-color: #D45400;
-}
-
-.btn-outline-danger{
-    color: white;
-}
-
-.btn-outline-danger:hover{
-    background-color: #D45400;
-}
-
-.left-initial {
-    left: initial !important;
-}
-
-.card-category:hover  {
-    background-color: rgb(200, 22, 22) !important;
-}
-
-.card-description {
-    overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  white-space: pre-wrap;
-}
-
-.card-price {
-    font-size: 200%;
-}
-
-.a-modified {
-    text-decoration: none !important;
-    color: white !important;
-}
-
-#Hero{
-    position: relative;
-    height: 80vh;
-    display: flex; width: 100%; align-items: center;
-    overflow: hidden;
-}
-
-#Hero .content{
-    width: 100%;
-    max-width: 14000px;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-}
-
-#myvideo{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-#Hero .blur{
-    background-color: rgb(22, 140, 186,0.35);
-    backdrop-filter: blur(5px);
-    position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
+@media (max-width: 992px) {
+  .no-mobile {
+    display: none;
+  }
 }
