--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -19,6 +19,10 @@
     --bs-nav-link-padding-x: 0.75rem;
 }
 
+.navbar.sticky-top {
+    box-shadow: 0 0 1.35rem -0.9rem #000;
+}
+
 .navbar i,
 .navbar a:not(.btn) {
     color: #333;
