--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,18 @@
   font-family: "Rubik", sans-serif
 }
 
+.bg-primary {
+  background-color: var(--primary-color) !important;
+}
+
+.bg-secondary {
+  background-color: #f6f9fc !important
+}
+
+.bg-light {
+  background-color: #fff !important;
+}
+
 .no-desktop {
   display: none;
 }
