--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,4 +9,5 @@
 @import 'user-profile.css';
 @import 'login.css';
 @import 'descrizione.css';
-@import 'createAnnouncements.css'
+@import 'createAnnouncements.css';
+@import 'dashboard.css';
