Modifiche grafiche alle viste Aggiungi annuncio e Modifica annuncio

--- a/resources/css/band.css
+++ b/resources/css/band.css
@@ -1,3 +1,8 @@
+.page-title-overlap + .container,
+.page-title-overlap + div > .container {
+  margin-top: -4.875rem;
+}
+
 .page-title-overlap {
   padding-bottom: 6.375rem;
 }
