Lievi modifiche grafiche

--- a/resources/css/form-controls.css
+++ b/resources/css/form-controls.css
@@ -8,7 +8,7 @@
 
 .form-check-input:focus {
   border-color: var(--primary-color);
-  box-shadow: 0 0 0.5rem 0.2rem rgba(var(--primary-color-rgb), 0.25);
+  box-shadow: 0 0 0.5rem rgba(var(--primary-color-rgb), 0.25);
 }
 
 .form-check-input:checked {
@@ -16,7 +16,8 @@
   border-color: var(--primary-color);
 }
 
-.was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
+.was-validated .form-control:invalid:focus,
+.form-control.is-invalid:focus {
   border-color: var(--bs-form-invalid-border-color);
   box-shadow: 0 0 0.5rem rgba(var(--bs-danger-rgb), 0.25);
 }
