--- a/resources/css/createAnnouncements.css
+++ b/resources/css/createAnnouncements.css
@@ -6,4 +6,12 @@
     width: 100%;
 }
 
+.preview-images{
+    height: 200px;
+    width: 200px;
+    background-position: center;
+    background-size: cover;
+
+}
+
 
