--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -15,6 +15,40 @@
   --bs-btn-disabled-border-color: #0d6efd;
 }
 
+.btn-google {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #dc4e41;
+  --bs-btn-border-color: #dc4e41;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #bb4237;
+  --bs-btn-hover-border-color: #b03e34;
+  --bs-btn-focus-shadow-rgb: 193,74,65;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #b03e34;
+  --bs-btn-active-border-color: #a53b31;
+  --bs-btn-active-shadow: inset 0 3px 5px hsla(0,0%,100%,.125);
+  --bs-btn-disabled-color: #293042;
+  --bs-btn-disabled-bg: #dc4e41;
+  --bs-btn-disabled-border-color: #dc4e41;
+}
+
+.btn-github {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #2f2f2f;
+  --bs-btn-border-color: #2f2f2f;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #4e4e4e;
+  --bs-btn-hover-border-color: #444;
+  --bs-btn-focus-shadow-rgb: 78,78,78;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #595959;
+  --bs-btn-active-border-color: #444;
+  --bs-btn-active-shadow: inset 0 3px 5px hsla(0,0%,100%,.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #2f2f2f;
+  --bs-btn-disabled-border-color: #2f2f2f;
+}
+
 .btn-sm, .btn-group-sm > .btn {
   --bs-btn-padding-y: 0.5rem;
   --bs-btn-padding-x: 0.75rem;
